Reduce fwup redundancy by using an EEx template
The final fwup.conf file is still being committed to allow time to grow
trust in using a template language to generate the fwup.conf.

This refactor is really needed for TRYBOOT support due to significantly
more fwup.conf redundancy to migrate pre-TRYBOOT devices.

--- a/fwup.conf
+++ b/fwup.conf
@@ -1,6 +1,9 @@
 # Firmware configuration file for the Raspberry Pi 0 2 W or 3 A+
-
-require-fwup-version="1.0.0"
+#
+# IMPORTANT:
+# Edit `fwup.conf.eex` and run `mix generate_fwup_conf` to generate fwup.conf.
+#
+require-fwup-version="0.15.0"  # For the trim() call
 
 include("${NERVES_SDK_IMAGES:-.}/fwup_include/fwup-common.conf")
 
@@ -75,11 +78,11 @@ task complete {
         uboot_setenv(uboot-env, "a.nerves_fw_uuid", "\${FWUP_META_UUID}")
     }
 
+    on-resource bootcode.bin { fat_write(${BOOT_A_PART_OFFSET}, "bootcode.bin") }
+    on-resource fixup.dat { fat_write(${BOOT_A_PART_OFFSET}, "fixup.dat") }
+    on-resource start.elf { fat_write(${BOOT_A_PART_OFFSET}, "start.elf") }
     on-resource config.txt { fat_write(${BOOT_A_PART_OFFSET}, "config.txt") }
     on-resource cmdline.txt { fat_write(${BOOT_A_PART_OFFSET}, "cmdline.txt") }
-    on-resource bootcode.bin { fat_write(${BOOT_A_PART_OFFSET}, "bootcode.bin") }
-    on-resource start.elf { fat_write(${BOOT_A_PART_OFFSET}, "start.elf") }
-    on-resource fixup.dat { fat_write(${BOOT_A_PART_OFFSET}, "fixup.dat") }
     on-resource kernel8.img { fat_write(${BOOT_A_PART_OFFSET}, "kernel8.img") }
     on-resource bcm2710-rpi-3-b.dtb { fat_write(${BOOT_A_PART_OFFSET}, "bcm2710-rpi-3-b.dtb") }
     on-resource bcm2710-rpi-3-b-plus.dtb { fat_write(${BOOT_A_PART_OFFSET}, "bcm2710-rpi-3-b-plus.dtb") }
@@ -154,11 +157,11 @@ task upgrade.a {
     # Write the new boot partition files and rootfs. The MBR still points
     # to the B partition, so an error or power failure during this part
     # won't hurt anything.
+    on-resource bootcode.bin { fat_write(${BOOT_A_PART_OFFSET}, "bootcode.bin") }
+    on-resource fixup.dat { fat_write(${BOOT_A_PART_OFFSET}, "fixup.dat") }
+    on-resource start.elf { fat_write(${BOOT_A_PART_OFFSET}, "start.elf") }
     on-resource config.txt { fat_write(${BOOT_A_PART_OFFSET}, "config.txt") }
     on-resource cmdline.txt { fat_write(${BOOT_A_PART_OFFSET}, "cmdline.txt") }
-    on-resource bootcode.bin { fat_write(${BOOT_A_PART_OFFSET}, "bootcode.bin") }
-    on-resource start.elf { fat_write(${BOOT_A_PART_OFFSET}, "start.elf") }
-    on-resource fixup.dat { fat_write(${BOOT_A_PART_OFFSET}, "fixup.dat") }
     on-resource kernel8.img { fat_write(${BOOT_A_PART_OFFSET}, "kernel8.img") }
     on-resource bcm2710-rpi-3-b.dtb { fat_write(${BOOT_A_PART_OFFSET}, "bcm2710-rpi-3-b.dtb") }
     on-resource bcm2710-rpi-3-b-plus.dtb { fat_write(${BOOT_A_PART_OFFSET}, "bcm2710-rpi-3-b-plus.dtb") }
@@ -203,10 +206,10 @@ task upgrade.a {
         uboot_setenv(uboot-env, "a.nerves_fw_misc", ${NERVES_FW_MISC})
         uboot_setenv(uboot-env, "a.nerves_fw_uuid", "\${FWUP_META_UUID}")
 
-	# Switch over to boot the new firmware
-	# NOTE: The mbr_write is the important step. Automatic fallback is not supported, so
-	#       setting the variables is a formality for Nerves.Runtime.firmware_validation_status and
-	#       other code.
+        # Switch over to boot the new firmware
+        # NOTE: The mbr_write is the important step. Automatic fallback is not supported, so
+        #       setting the variables is a formality for Nerves.Runtime.firmware_validation_status and
+        #       other code.
         uboot_setenv(uboot-env, "nerves_fw_active", "a")
         uboot_setenv(uboot-env, "a.nerves_fw_validated", "1")
         mbr_write(mbr-a)
@@ -245,11 +248,11 @@ task upgrade.b {
     # Write the new boot partition files and rootfs. The MBR still points
     # to the A partition, so an error or power failure during this part
     # won't hurt anything.
+    on-resource bootcode.bin { fat_write(${BOOT_B_PART_OFFSET}, "bootcode.bin") }
+    on-resource fixup.dat { fat_write(${BOOT_B_PART_OFFSET}, "fixup.dat") }
+    on-resource start.elf { fat_write(${BOOT_B_PART_OFFSET}, "start.elf") }
     on-resource config.txt { fat_write(${BOOT_B_PART_OFFSET}, "config.txt") }
     on-resource cmdline.txt { fat_write(${BOOT_B_PART_OFFSET}, "cmdline.txt") }
-    on-resource bootcode.bin { fat_write(${BOOT_B_PART_OFFSET}, "bootcode.bin") }
-    on-resource start.elf { fat_write(${BOOT_B_PART_OFFSET}, "start.elf") }
-    on-resource fixup.dat { fat_write(${BOOT_B_PART_OFFSET}, "fixup.dat") }
     on-resource kernel8.img { fat_write(${BOOT_B_PART_OFFSET}, "kernel8.img") }
     on-resource bcm2710-rpi-3-b.dtb { fat_write(${BOOT_B_PART_OFFSET}, "bcm2710-rpi-3-b.dtb") }
     on-resource bcm2710-rpi-3-b-plus.dtb { fat_write(${BOOT_B_PART_OFFSET}, "bcm2710-rpi-3-b-plus.dtb") }
@@ -294,10 +297,10 @@ task upgrade.b {
         uboot_setenv(uboot-env, "b.nerves_fw_misc", ${NERVES_FW_MISC})
         uboot_setenv(uboot-env, "b.nerves_fw_uuid", "\${FWUP_META_UUID}")
 
-	# Switch over to boot the new firmware
-	# NOTE: The mbr_write is the important step. Automatic fallback is not supported, so
-	#       setting the variables is a formality for Nerves.Runtime.firmware_validation_status and
-	#       other code.
+        # Switch over to boot the new firmware
+        # NOTE: The mbr_write is the important step. Automatic fallback is not supported, so
+        #       setting the variables is a formality for Nerves.Runtime.firmware_validation_status and
+        #       other code.
         uboot_setenv(uboot-env, "nerves_fw_active", "b")
         uboot_setenv(uboot-env, "b.nerves_fw_validated", "1")
         mbr_write(mbr-b)
@@ -322,13 +325,12 @@ task upgrade.wrongplatform {
 
 task provision {
     require-uboot-variable(uboot-env, "a.nerves_fw_platform", "${NERVES_FW_PLATFORM}")
-    require-uboot-variable(uboot-env, "a.nerves_fw_architecture", "${NERVES_FW_ARCHITECTURE}")
     on-init {
         include("${NERVES_PROVISIONING}")
     }
 }
 task provision.wrongplatform {
     on-init {
-        error("Expecting platform=${NERVES_FW_PLATFORM} and architecture=${NERVES_FW_ARCHITECTURE}")
+        error("Expecting platform=${NERVES_FW_PLATFORM}")
     }
 }
