--- a/REUSE.toml
+++ b/REUSE.toml
@@ -3,9 +3,9 @@ version = 1
 [[annotations]]
 path = [
  ".formatter.exs",
- ".github/workflows/ci.yml",
  ".github/CODEOWNERS",
  ".gitignore",
+ "nerves_defconfig",
  "NOTICE",
  "REUSE.toml",
  "mix.exs",
@@ -17,12 +17,13 @@ SPDX-FileCopyrightText = "None"
 SPDX-License-Identifier = "CC0-1.0"
 
 # Buildroot derived or related files
+# NOTE: packages here proactively have copyright assigned to the Buildroot
+# developers to avoid worrying about copyright assignment when upstreaming.
 [[annotations]]
 path = [
  "Config.in",
  "package/**",
  "external.mk",
- "nerves_defconfig",
  "post-build.sh",
  "post-createfs.sh"
 ]
