--- a/fwup.conf
+++ b/fwup.conf
@@ -27,6 +27,7 @@ file-resource bcm2710-rpi-3-b-plus.dtb { host-path = "${NERVES_SYSTEM}/images/bc
 file-resource bcm2710-rpi-cm3.dtb { host-path = "${NERVES_SYSTEM}/images/bcm2710-rpi-cm3.dtb" }
 file-resource bcm2710-rpi-zero-2-w.dtb { host-path = "${NERVES_SYSTEM}/images/bcm2710-rpi-zero-2-w.dtb" }
 file-resource overlays/dwc2.dtbo { host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/dwc2.dtbo" }
+file-resource overlays/gpio-poweroff.dtbo { host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/gpio-poweroff.dtbo" }
 file-resource overlays/i2c-mux.dtbo { host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/i2c-mux.dtbo" }
 file-resource overlays/imx219.dtbo { host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/imx219.dtbo" }
 file-resource overlays/imx296.dtbo { host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/imx296.dtbo" }
@@ -100,6 +101,7 @@ task complete {
     on-resource bcm2710-rpi-cm3.dtb { fat_write(${BOOT_A_PART_OFFSET}, "bcm2710-rpi-cm3.dtb") }
     on-resource bcm2710-rpi-zero-2-w.dtb { fat_write(${BOOT_A_PART_OFFSET}, "bcm2710-rpi-zero-2-w.dtb") }
     on-resource overlays/dwc2.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/dwc2.dtbo") }
+    on-resource overlays/gpio-poweroff.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/gpio-poweroff.dtbo") }
     on-resource overlays/i2c-mux.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/i2c-mux.dtbo") }
     on-resource overlays/imx219.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/imx219.dtbo") }
     on-resource overlays/imx296.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/imx296.dtbo") }
@@ -181,6 +183,7 @@ task upgrade.old-a {
     on-resource bcm2710-rpi-cm3.dtb { fat_write(${BOOT_A_PART_OFFSET}, "bcm2710-rpi-cm3.dtb") }
     on-resource bcm2710-rpi-zero-2-w.dtb { fat_write(${BOOT_A_PART_OFFSET}, "bcm2710-rpi-zero-2-w.dtb") }
     on-resource overlays/dwc2.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/dwc2.dtbo") }
+    on-resource overlays/gpio-poweroff.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/gpio-poweroff.dtbo") }
     on-resource overlays/i2c-mux.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/i2c-mux.dtbo") }
     on-resource overlays/imx219.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/imx219.dtbo") }
     on-resource overlays/imx296.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/imx296.dtbo") }
@@ -270,6 +273,7 @@ task upgrade.old-b {
     on-resource bcm2710-rpi-cm3.dtb { fat_write(${BOOT_B_PART_OFFSET}, "bcm2710-rpi-cm3.dtb") }
     on-resource bcm2710-rpi-zero-2-w.dtb { fat_write(${BOOT_B_PART_OFFSET}, "bcm2710-rpi-zero-2-w.dtb") }
     on-resource overlays/dwc2.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/dwc2.dtbo") }
+    on-resource overlays/gpio-poweroff.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/gpio-poweroff.dtbo") }
     on-resource overlays/i2c-mux.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/i2c-mux.dtbo") }
     on-resource overlays/imx219.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/imx219.dtbo") }
     on-resource overlays/imx296.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/imx296.dtbo") }
@@ -360,6 +364,7 @@ task upgrade.a {
     on-resource bcm2710-rpi-cm3.dtb { fat_write(${BOOT_A_PART_OFFSET}, "bcm2710-rpi-cm3.dtb") }
     on-resource bcm2710-rpi-zero-2-w.dtb { fat_write(${BOOT_A_PART_OFFSET}, "bcm2710-rpi-zero-2-w.dtb") }
     on-resource overlays/dwc2.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/dwc2.dtbo") }
+    on-resource overlays/gpio-poweroff.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/gpio-poweroff.dtbo") }
     on-resource overlays/i2c-mux.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/i2c-mux.dtbo") }
     on-resource overlays/imx219.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/imx219.dtbo") }
     on-resource overlays/imx296.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/imx296.dtbo") }
@@ -449,6 +454,7 @@ task upgrade.b {
     on-resource bcm2710-rpi-cm3.dtb { fat_write(${BOOT_B_PART_OFFSET}, "bcm2710-rpi-cm3.dtb") }
     on-resource bcm2710-rpi-zero-2-w.dtb { fat_write(${BOOT_B_PART_OFFSET}, "bcm2710-rpi-zero-2-w.dtb") }
     on-resource overlays/dwc2.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/dwc2.dtbo") }
+    on-resource overlays/gpio-poweroff.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/gpio-poweroff.dtbo") }
     on-resource overlays/i2c-mux.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/i2c-mux.dtbo") }
     on-resource overlays/imx219.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/imx219.dtbo") }
     on-resource overlays/imx296.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/imx296.dtbo") }
